<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pageacceuil.AccueilActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/title"
            android:textSize="30sp" />
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/host"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bouton"
            android:text="@string/host" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/connect"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bouton"
            android:text="@string/connect" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/option"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bouton"
            android:text="@string/option" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/quit"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bouton"
            android:text="@string/quit" />
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal" />
        
    </LinearLayout>

</RelativeLayout>